snapshots/aws_tgw_asymmetric_non_default_rtb/aws_configs/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0b8636504e9905ba0",
     "NetworkAclId": "acl-06f469a17b96fa5d4",
     "SubnetId": "subnet-0cf16c36d8ed08240"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0bcc8605105fde9df",
     "NetworkAclId": "acl-06f469a17b96fa5d4",
     "SubnetId": "subnet-0651d1348bc14464b"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-06f469a17b96fa5d4",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "fish-general"
    }
   ],
   "VpcId": "vpc-078e17ef20aeaf177"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-01c7acd54d4b71d6d",
     "NetworkAclId": "acl-023b1b1e8a6a371bb",
     "SubnetId": "subnet-0ab8deb57a658b3da"
    },
    {
     "NetworkAclAssociationId": "aclassoc-03704cfe8136b5e14",
     "NetworkAclId": "acl-023b1b1e8a6a371bb",
     "SubnetId": "subnet-04b3ade30f71bd812"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-023b1b1e8a6a371bb",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "bat-general"
    }
   ],
   "VpcId": "vpc-0f52dfe0748da9e28"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-04b25c3b307a26e3a",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0f52dfe0748da9e28"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-02188a903b2a4767c",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-078e17ef20aeaf177"
  }
 ]
}
